tests/ui/proc-macro/macro-rules-derive.stderr
error[E0412]: cannot find type `MissingType` in this scope
  --> $DIR/macro-rules-derive.rs:10:20
   |
LL | / macro_rules! produce_it {
LL | |     ($name:ident) => {
LL | |         #[first]
LL | |         struct $name {
LL | |             field: MissingType
   | |                    ^^^^^^^^^^^ not found in this scope
LL | |         }
LL | |     }
LL | | }
   | |_- in this expansion of `produce_it!`
LL |
LL |   produce_it!(MyName);
   |   ------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
